--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BookMyShow</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
+    <nav id="navbar" class="navbar  bg-white fixed-top">
+        <div class=" container-fluid">
+            <form class="d-flex justify-content-center" role="search" style="width: 600px;padding-top:10px;">
+                <img id="logo"  src="../BookMyShow/media/bookmyshow_logo.png" alt=""height="50px"></a>
+                <i id="slogo"  class="fa-solid fa-magnifying-glass" aria-hidden="false"></i>
+                <input id="search"  class="form-control me-2" type="search" placeholder="     Search for Movies,Events,Plays,Sports and Activities" aria-label="Search">
+            </form>
+    </nav>
+    <!-- Second Nav Bar -->
     
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
