--- a/index.html
+++ b/index.html
@@ -17,10 +17,34 @@
                 <i id="slogo"  class="fa-solid fa-magnifying-glass" aria-hidden="false"></i>
                 <input id="search"  class="form-control me-2" type="search" placeholder="     Search for Movies,Events,Plays,Sports and Activities" aria-label="Search">
             </form>
+            <div id="location" class="dropdown ">            
+                <a  class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Kochi
+                </a>
+            </div>
+
+            <button id="login" class="btn btn-danger" type="submit">sign in</button>
+
     </nav>
     <!-- Second Nav Bar -->
-    
-
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        <div class="container-fluid">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
