--- a/index.html
+++ b/index.html
@@ -11,57 +11,88 @@
 </head>
 <body>
     <nav id="navbar" class="navbar bg-white fixed-top">
-        <div class=" container-fluid">
-            <form class="d-flex justify-content-center" role="search" style="width: 600px;padding-top:10px;">
-                <img id="logo"  src="../BookMyShow/media/bookmyshow_logo.png" alt=""height="50px"></a>
-                <i id="slogo"  class="fa-solid fa-magnifying-glass" aria-hidden="false"></i>
-                <input id="search"  class="form-control me-2" type="search" placeholder="       Search for Movies,Events,Plays,Sports and Activities" aria-label="Search">
+        <div class="container-fluid">
+            <form class="d-flex justify-content-center" role="search" style="width: 600px; padding-top: 10px;">
+                <img id="logo" src="../BookMyShow/media/bookmyshow_logo.png" alt="" height="50px">
+                <i id="slogo" class="fa-solid fa-magnifying-glass" aria-hidden="false"></i>
+                <input id="search" class="form-control me-2" type="search" placeholder="      Search for Movies, Events, Plays, Sports, and Activities" aria-label="Search">
             </form>
-            <div id="location" class="dropdown ">            
-                <a  class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <div id="location" class="dropdown">            
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Kochi
                 </a>
             </div>
-
-            <button id="login" class="btn btn-danger" type="submit">sign in</button>
-
+            <button id="login" class="btn btn-danger" type="submit">Sign In</button>
+        </div>
     </nav>
-    <nav id="navbar2" class=" second-navbar mt-5 d-none d-md-block">
-        <div id="navrow" class="row container  pt-2">
-            <div class="col-auto ">
-                <p class="text-black">Movies</p>
+    
+    <!-- Second Navbar (Below First Navbar) -->
+    <nav id="navbar2" class="second-navbar mt-2 d-none d-md-block">
+        <div id="navrow" class="row container pt-1">
+            <div class="col-auto">
+                <p class="text-black mb-0">Movies</p>
             </div>
             <div class="col-auto">
-                <p class="text-black">Steam</p>
+                <p class="text-black mb-0">Stream</p>
             </div>
-            <div class="col-auto">
-                <p class="text-black">Events</p>
+            <div class="col-sm">
+                <p class="text-black mb-0">Events</p>
             </div>
-            <div class="col-auto">
-                <p class="text-black">Plays</p>
+            <div class="col-sm">
+                <p class="text-black mb-0">Plays</p>
             </div>
-            <div class="col-auto">
-                <p class="text-black">Sports</p>
+            <div class="col-sm">
+                <p class="text-black mb-0">Sports</p>
             </div>
-            <div class="col-auto">
-                <p class="text-black">Activities</p>
+            <div class="col-sm">
+                <p class="text-black mb-0">Activities</p>
             </div>
-
-
             <div id="navrow2" class="col-auto ms-auto">
-                <p class="text-black">ListYourShow</p>
+                <p class="text-black mb-0">List Your Show</p>
             </div>
-            <div class="col-auto">
-                <p class="text-black">Corparates</p>
+            <div class="col-sm">
+                <p class="text-black mb-0">Corporates</p>
             </div>
-            <div class="col-auto">
-                <p class="text-black">Offers</p>
+            <div class="col-sm">
+                <p class="text-black mb-0">Offers</p>
             </div>
-            <div class="col-auto">
-                <p class="text-black">Gift Cards</p>
+            <div class="col-sm">
+                <p class="text-black mb-0">Gift Cards</p>
             </div>
         </div>
     </nav>
+    <div class="c container-fluid" style="width: 100%;"> 
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </ol>
+    <!-- Carousel Items -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../BookMyShow/media/cauosal_playcardnewweb.avif" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="../BookMyShow/media/cauosal_2.avif" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="../BookMyShow/media/c1.avif" class="d-block w-100" alt="">
+      </div>
+    </div>
+    <!-- Controls (Previous/Next) -->
+    <button id="cbutton" class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button id="cbutton" class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+
  
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
