--- a/index.html
+++ b/index.html
@@ -62,39 +62,168 @@
         </div>
     </nav>
     <div class="c container-fluid" style="width: 100%;"> 
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </ol>
-    <!-- Carousel Items -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../BookMyShow/media/cauosal_playcardnewweb.avif" class="d-block w-100" alt="">
-      </div>
-      <div class="carousel-item">
-        <img src="../BookMyShow/media/cauosal_2.avif" class="d-block w-100" alt="">
-      </div>
-      <div class="carousel-item">
-        <img src="../BookMyShow/media/c1.avif" class="d-block w-100" alt="">
-      </div>
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </ol>
+        <!-- Carousel Items -->
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../BookMyShow/media/cauosal_playcardnewweb.avif" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item">
+            <img src="../BookMyShow/media/cauosal_2.avif" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item">
+            <img src="../BookMyShow/media/c1.avif" class="d-block w-100" alt="">
+        </div>
+        </div>
+        <!-- Controls (Previous/Next) -->
+        <button id="cbutton" class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button id="cbutton" class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <!-- Controls (Previous/Next) -->
-    <button id="cbutton" class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button id="cbutton" class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>
+    </div>
+    <div class="container mt-4">
+        <h3>Recommended Movies</h3>
 
- 
-    
+        <div class="scroll-container mt-4">
+            <div class="row flex-nowrap overflow-auto">
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/ARM.avif" alt="A.R.M" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">A.R.M</h5>
+                                <p class="movie-genre">Action/Adventure/Drama</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/Vettaiyan.avif" alt="Kishkindha Kaandam" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Kishkindha Kaandam</h5>
+                                <p class="movie-genre">Mystery/Thriller</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/kishe.avif" alt="Kishkindha Kaandam" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Kishkindha Kaandam</h5>
+                                <p class="movie-genre">Mystery/Thriller</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/Devara.avif" alt="Devara" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Joker: Folie a Deux</h5>
+                                <p class="movie-genre">Drama/Suspense/Thriller</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/joker.avif" alt="Thekku Vadakku" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Joker: Folie a Deux</h5>
+                                <p class="movie-genre">Comedy/Drama</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- Add 4 more movie cards -->
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/gumasthan.avif" alt="Movie 1" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Movie 1</h5>
+                                <p class="movie-genre">Genre</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/venom.avif" alt="Movie 2" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Movie 2</h5>
+                                <p class="movie-genre">Genre</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/thek_vadake.avif" alt="Movie 3" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Movie 3</h5>
+                                <p class="movie-genre">Genre</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-3">
+                    <a href="#" class="text-decoration-none text-black">
+                        <div class="movie-card">
+                            <img src="../BookMyShow/media/lubber_pandhu.avif" alt="Movie 4" class="img-fluid rounded" id="posters">
+                            <div class="movie-details mt-2">
+                                <h5 class="movie-title">Movie 4</h5>
+                                <p class="movie-genre">Genre</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container container-fluid my-4">
+        <img class="img-fluid" src="../BookMyShow/media/stream.png" alt="">
+    </div>
+
+    <div class="container container-fluid my-5">
+        <h4>The Best Of Live Events</h4>
+        <div class="row">
+            <div class="col-md-2 mt-2">
+                <img width="100%" height="100%" src="../BookMyShow/media/Live_1.avif" alt="">
+            </div>
+            <div class="col-md-2 mt-2">
+                <img width="100%" height="100%" src="../BookMyShow/media/Liv2.avif" alt="">
+            </div>
+            <div class="col-md-2 mt-2">
+                <img width="100%" height="100%" src="../BookMyShow/media/Live3.avif" alt="">
+            </div>
+            <div class="col-md-2 mt-2">
+                <img width="100%" height="100%" src="../BookMyShow/media/Live4.avif" alt="">
+            </div>
+            <div class="col-md-2 mt-2">
+                <img width="100%" height="100%" src="../BookMyShow/media/Live5.avif" alt="">
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
