updated second ARM page

--- a/ARM.html
+++ b/ARM.html
@@ -60,5 +60,126 @@
             </div>
         </div>
     </nav>
+    <div id="main1" class="image-fluid d-flex ">
+        <div id="main2" class=" row align-items-center">
+            <!-- Movie Card 1 -->
+            <div class="col-md-4">
+                <div class="movie-card">
+                    <img src="../BookMyShow/media/ARM.avif" alt="A.R.M" >
+                    <div class="movie-details">
+                        <div class="movie-stats" style="background-color: #000000">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="main3" class="col-md-8">
+                <div class="movieinfo">
+                    <div class="movietitle"><h1>A.R.M</h1></div>
+                    <div id="rating" class="d-flex align-items-center">
+                        <span id="star" class="star text-orange">&nbsp;&nbsp; ★</span>
+                        <span class="score mx-2"><b style="color: white;">8.7/10</b></span>
+                        <span class="votes" style="color: white;">(58.1K Votes) ></span>
+                        <button id="ratebtn" class="btn btn-outline-secondary rate-btn ms-auto"><b style="color: white;">Rate now</b>&nbsp;&nbsp;</button>
+                    </div>
+                    <div class="lang row gap-4 mt-3">
+                        <div id="lang" class="col-2"><b style="color: white;">2D,3D</b></div>
+                        <div id="lang" class="col-9"><span class="language" style="color: white;">Malayalam, Hindi, Tamil, Kannada, Telugu</span></div>
+                    </div>
+                    <div class="duration mt-3"><b style="color: white;">2h 23m • Action,Adventure, Drama,Period • UA • 12 Sep, 2024</b></div></div>
+                    
+
+                    <a id="book" class="mt-5" href="#"><b >Book tickets</b></a>
+
+
+                </div>
+            </div>
+      </div>
+    </div>
+    <div class="sample container p-5">
+        <h3><b>About the movie</b></h3>
+        <span>Set in Northern Kerala across the years 1900, 1950, and 1990, this epic tale follows three generations of heroes Maniyan,</span>
+        <span>Kunjikelu, and Ajayan as they strive to protect the land's most vital treasure.</span>
+    </div>
+    <hr class="mx-auto d-block" width="100%">
+    <div id="demo" class="carousel slide container" data-bs-ride="false">
+        <h4><b>Cast</b></h4>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+
+                <div class="d-flex gap-2">
+                    <div>
+                        <img src="media/c1.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                        <figcaption style="text-align: center;">Tovino Thomas</figcaption> 
+                    </div>
+                    <div>
+                        <img src="media/c2.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                        <figcaption style="text-align: center;">Krithi</figcaption>
+                    </div>
+                    <div>
+                        <img src="media/c3.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                            <figcaption style="text-align: center;">Aiswarya</figcaption>
+                    </div> 
+                    <div>
+                        <img src="media/c4.avif" class=" d-inline rounded-circle" style="width:165px;" alt=""> 
+                        <figcaption style="text-align: center;">Surabhi</figcaption>
+                    </div>
+                    <div>
+                        <img src="media/c5.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                            <figcaption style="text-align: center;">Basil</figcaption>
+                    </div>
+                    <div> 
+                        <img src="media/c6.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                        <figcaption style="text-align: center;">Harish</figcaption>
+                    </div>
+                    <div> 
+                        <img src="media/c7.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                        <figcaption style="text-align: center;">Madhupal</figcaption> 
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="d-flex gap-2">
+                <div>
+                <img src="media/c8.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                <figcaption style="text-align: center;">Rohini</figcaption> 
+               </div>
+               <div>
+                <img src="media/c9.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                <figcaption style="text-align: center;">Aju varghese</figcaption>
+               </div>
+               <div>
+                <img src="media/c10.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                <figcaption style="text-align: center;">Kabir</figcaption>
+                </div> 
+                <div>
+                <img src="media/c11.avif" class=" d-inline rounded-circle" style="width:165px;" alt=""> 
+                <figcaption style="text-align: center;">Jagadeesh</figcaption>
+                </div>
+                <div>
+                <img src="media/c12.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                <figcaption style="text-align: center;">Sudheesh</figcaption>
+                </div>
+                <div> 
+                <img src="media/c13.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                <figcaption style="text-align: center;">Nisthar</figcaption>
+                </div>
+                <div> 
+                    <img src="media/c14.avif" class=" d-inline rounded-circle" style="width:165px;" alt="">
+                    <figcaption style="text-align: center;">Maala</figcaption>
+                    </div>
+          </div>   
+  
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+    </div>
+
 </body>
 </html>
