--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="../BookMyShow/media/cauosal_2.avif" class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-            <img src="../BookMyShow/media/c1.avif" class="d-block w-100" alt="">
+            <img src="../BookMyShow/media/top.avif" class="d-block w-100" alt="">
         </div>
         </div>
         <!-- Controls (Previous/Next) -->
