--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     <img src="../BookMyShow/media/Vettaiyan.avif" class="img-fluid" alt="Vettaiyan">
                                     <div class="movie-details">
                                         <h5 class="movie-title">Vettaiyan</h5>
-                                        <p class="movie-genre">Comedy/Drama</p>
+                                        <p class="movie-genre">Action/Drama</p>
                                     </div>
                                 </div>
                             </a>
@@ -239,10 +239,10 @@
         </div>
     </div>
 
-    <div class="premiers container mt-4">
-        <h3 style="color: white;">PREMIERES</h3>
-        <p style="color: white;" >Brand new releases every Friday</p>
-        <div id="movieCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="container-fluid premiers mt-4 w-100">
+        <h3 style="color: white; padding-top: 20px;" class="container ">PREMIERES</h3>
+        <p style="color: white;" class="container">Brand new releases every Friday</p>
+        <div id="movieCarousel" class="container carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="row justify-content-center">
