--- a/index.html
+++ b/index.html
@@ -62,35 +62,35 @@
         </div>
     </nav>
     <div class="c container-fluid" style="width: 100%;"> 
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </ol>
-        <!-- Carousel Items -->
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="../BookMyShow/media/cauosal_playcardnewweb.avif" class="d-block w-100" alt="">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </ol>
+            <!-- Carousel Items -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../BookMyShow/media/cauosal_playcardnewweb.avif" class="d-block w-100" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img src="../BookMyShow/media/cauosal_2.avif" class="d-block w-100" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img src="../BookMyShow/media/top.avif" class="d-block w-100" alt="">
+                </div>
+            </div>
+            <!-- Controls (Previous/Next) -->
+            <button id="cbutton" class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button id="cbutton" class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-item">
-            <img src="../BookMyShow/media/cauosal_2.avif" class="d-block w-100" alt="">
-        </div>
-        <div class="carousel-item">
-            <img src="../BookMyShow/media/top.avif" class="d-block w-100" alt="">
-        </div>
-        </div>
-        <!-- Controls (Previous/Next) -->
-        <button id="cbutton" class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-        </button>
-        <button id="cbutton" class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-        </button>
-    </div>
     </div>
     <div class="sample container p-5">
         <div class="d-flex justify-content-between align-items-center mb-1">
@@ -206,11 +206,11 @@
             </div>
     
             <!-- Left and right controls/icons -->
-            <button style="padding-right: 10px;" class="carousel-control-prev" type="button" data-bs-target="#demo2" data-bs-slide="prev">
+            <button style="padding-right: 130px;padding-bottom: 138px;" class="carousel-control-prev" type="button" data-bs-target="#demo2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo2" data-bs-slide="next">
+            <button style="padding-bottom: 138px;padding-left: 90px;" class="carousel-control-next" type="button" data-bs-target="#demo2" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
