--- a/ARM.html
+++ b/ARM.html
@@ -222,7 +222,7 @@
     <div class="sample container p-5">
         <div class="d-flex justify-content-between align-items-center mb-1">
             <h3  class="mb-0"><b>You might also like</b></h3>
-            <a href="#"  class="text-danger text-decoration-none ms-2">View All ></a>
+            <a href="index.html"  class="text-danger text-decoration-none ms-2">View All ></a>
         </div>
     <div id="demo3" class="carousel slide" data-bs-ride="false">
         <!-- The slideshow/carousel -->
@@ -341,7 +341,7 @@
      </div>
     </div>
     
-    <footer style="overflow-y: hidden;" class="footer py-5 d-none d-md-block">
+    <footer style="overflow-y: hidden;" class="footer py-5 ">
         <div class="container-fluid">
             <div class="row justify-content-center text-center text-md-start">
                 <div class="col-md-10">
