--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <form class="d-flex justify-content-center" role="search" style="width: 600px; padding-top: 10px;">
                 <img id="logo" src="../BookMyShow/media/bookmyshow_logo.png" alt="" height="50px">
                 <i id="slogo" class="fa-solid fa-magnifying-glass" aria-hidden="false"></i>
-                <input id="search" class="form-control me-2" type="search" placeholder="      Search for Movies, Events, Plays, Sports, and Activities" aria-label="Search">
+                <input id="search" class="fa-magnifying-glass form-control me-2" type="search" placeholder="      Search for Movies, Events, Plays, Sports, and Activities" aria-label="Search">
             </form>
             <div id="location" class="dropdown">            
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -344,7 +344,7 @@
         </div>
     </div>
     
-    <footer style="overflow-y: hidden;" class="footer py-5 d-none d-md-block">
+    <footer style="overflow-y: hidden;" class="footer py-5 ">
             <div class="container-fluid">
                 <div class="row justify-content-center text-center text-md-start">
                     <div class="col-md-10">
